--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Fucking Your Mom Is So FUn</title>
+    <title>Fucking your mom is so Fun</title>
+    <meta property="og:title" content="Fucking your mom is so Fun" />
+    <meta name="description" content="Damn bro, your mom is so thicc, Just look at that phat ass, Fucking her must be so damn fun" />
+    <meta property="og:description" content="Damn bro, your mom is so thicc, Just look at that phat ass, Fucking her must be so damn fun" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Radio+Canada:wght@300&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: 'Radio Canada', sans-serif;
+        background-color: #23272a;
+        color: #f37b68;
+      }
+      h1 {
+        font-family: 'Koulen', cursive;
+      }
+    </style>
   </head>
   <body>
     <h1>Fucking Your Mom Is So Fun</h1>
+    <h2>Damn bro, your mom is so thicc, Just look at that phat ass, Fucking her must be so damn fun</h2>
   </body>
 </html>
